TSVPORTAL-11319 - Fix delete

--- a/app/views/company-email-receipt-create.html
+++ b/app/views/company-email-receipt-create.html
@@ -77,7 +77,7 @@
                 <strong>Options</strong>
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" ng-model="companyEmailReceipt.asAttachment" ng-disabled="isDisabled(currency)"> As Attachment
+                    <input type="checkbox" ng-model="companyEmailReceipt.emailAsAttachment" ng-disabled="isDisabled(currency)"> As Attachment
                   </label>
                 </div>
               </div>
