--- a/app/views/company-email-receipt-list.html
+++ b/app/views/company-email-receipt-list.html
@@ -104,7 +104,7 @@
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(companyEmailReceipt[$index], ['emailFrom', 'emailSubject', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(companyEmailReceipt, ['emailFrom', 'emailSubject', 'startDate', 'endDate'])"
                     tabindex="0"
                     ng-show="isCRUD && showDeleteButton(companyEmailReceipt.startDate)">
               <i class="fa fa-trash"></i>
