--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -73,7 +73,7 @@
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(companyReceipt[$index], ['receiptType', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(companyReceipt, ['receiptType', 'startDate', 'endDate'])"
                     tabindex="0"
                     ng-show="isCRUD && showDeleteButton(companyReceipt.startDate)">
               <i class="fa fa-trash"></i>
