--- a/app/views/company-email-receipt-create.html
+++ b/app/views/company-email-receipt-create.html
@@ -18,14 +18,14 @@
             <div class="col-xs-12 col-sm-3">
               <div class="form-group">
                 <label for="emailFrom">From</label>
-                <input ng-model="companyEmailReceipt.emailFrom" type="text" ng-disabled="isDisabled()"
+                <input ng-model="companyEmailReceipt.emailFrom" type="email" ng-disabled="isDisabled()"
                        maxlength="50" class="form-control" id="emailFrom" name="emailFrom">
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
               <div class="form-group">
                 <label for="emailBcc">BCC</label>
-                <input ng-model="companyEmailReceipt.emailBcc" type="text" ng-disabled="isDisabled()"
+                <input ng-model="companyEmailReceipt.emailBcc" type="email" ng-disabled="isDisabled()"
                        maxlength="200" class="form-control" id="emailBcc" name="emailBcc">
               </div>
             </div>
