--- a/app/views/company-email-receipt-create.html
+++ b/app/views/company-email-receipt-create.html
@@ -19,7 +19,7 @@
               <div class="form-group">
                 <label for="emailFrom">From</label>
                 <input ng-model="companyEmailReceipt.emailFrom" type="email" ng-disabled="isDisabled()"
-                       maxlength="50" class="form-control" id="emailFrom" name="emailFrom">
+                       maxlength="50" class="form-control" id="emailFrom" name="emailFrom" required="true">
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
@@ -33,7 +33,7 @@
               <div class="form-group">
                 <label for="emailSubject">Subject</label>
                 <input ng-model="companyEmailReceipt.emailSubject" type="text" ng-disabled="isDisabled()"
-                       maxlength="200" class="form-control" id="emailSubject" name="emailSubject">
+                       maxlength="200" class="form-control" id="emailSubject" name="emailSubject" required="true">
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
         </div>
 
         <div class="panel-footer text-right">
-          <a href="#/company-receipt-emails" class="btn btn-default" ng-hide="readOnly">Cancel</a>
+          <a href="#/company-email-receipts" class="btn btn-default" ng-hide="readOnly">Cancel</a>
           <button class="btn btn-primary" ng-click="formSave()" ng-hide="readOnly">
             <span class="fa fa-check-square-o" aria-hidden="true"></span> <span
             class="hidden-xs">Save</span>
