TSVPORTAL-11319 - Fix required fields

--- a/app/views/company-email-receipt-create.html
+++ b/app/views/company-email-receipt-create.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-3">
               <div class="form-group">
-                <label for="emailFrom">From</label>
+                <label for="emailFrom">From *</label>
                 <input ng-model="companyEmailReceipt.emailFrom" type="email" ng-disabled="isDisabled()"
                        maxlength="50" class="form-control" id="emailFrom" name="emailFrom" required="true">
               </div>
@@ -31,7 +31,7 @@
             </div>
             <div class="col-xs-12 col-sm-6">
               <div class="form-group">
-                <label for="emailSubject">Subject</label>
+                <label for="emailSubject">Subject *</label>
                 <input ng-model="companyEmailReceipt.emailSubject" type="text" ng-disabled="isDisabled()"
                        maxlength="200" class="form-control" id="emailSubject" name="emailSubject" required="true">
               </div>
