--- a/app/views/company-email-receipt-create.html
+++ b/app/views/company-email-receipt-create.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12">
               <div class="form-group">
-                <label for="emailBody">Body</label>
+                <label for="emailBody">Body *</label>
                 <textarea ng-model="companyEmailReceipt.emailBody" ng-disabled="isDisabled()" required="true" rows="25" class="form-control" id="emailBody" name="emailBody"></textarea>
               </div>
             </div>
