TSVPORTAL-11345 - Add header and footer to company receipt

--- a/app/views/company-receipt-create.html
+++ b/app/views/company-receipt-create.html
@@ -66,8 +66,24 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12">
               <div class="form-group">
+                <label for="header">Header</label>
+                <textarea ng-model="companyReceipt.header" ng-disabled="isDisabled()" rows="25" class="form-control" id="header" name="header"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-12">
+              <div class="form-group">
                 <label for="template">Template</label>
                 <textarea ng-model="companyReceipt.template" ng-disabled="isDisabled()" rows="25" class="form-control" id="template" name="template"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-12">
+              <div class="form-group">
+                <label for="footer">Footer</label>
+                <textarea ng-model="companyReceipt.footer" ng-disabled="isDisabled()" rows="25" class="form-control" id="footer" name="footer"></textarea>
               </div>
             </div>
           </div>
