--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -150,8 +150,22 @@
       </div>
 
       <h3>Limitation Per Shop</h3>
-
       <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <div class="form-group">
+            <label  for="limitByShopDiscountType">Limitation Type</label>
+            <select
+              name="limitByShopDiscountType"
+              class="form-control"
+              id="limitByShopDiscountType"
+              ng-model="formData.limitByShopDiscountType"
+              ng-options="limitationType as limitationType.name for limitationType in discountLimitationTypes">
+              <option selected default value="">Select Limitation Type</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row" ng-if="formData.limitByShopDiscountType.id === 1">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
             <label class="control-label">Item Qty Limit Per Shop</label>
@@ -173,6 +187,35 @@
                       {{ currency.code }} *
                     </div>
                     <input ng-model="formData.amountLimitPerShopValue[currency.id]" name="{{ currency.code }}AmountLimitPerShopValue" ng-disabled="$parent.isDisabled()" ng-required="formData.isAmountLimitPerShop" ng-pattern="regexp.price" type="text" class="form-control" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+      <div class="row" ng-if="formData.limitByShopDiscountType.id === 2">
+        <div class="col-xs-12 col-sm-6">
+          <div class="form-group">
+            <label class="control-label">Discount Qty Limit Per Shop</label>
+            <input class="form-control" ng-model="formData.discountQtyLimitPerShop" name="discountQtyLimitPerShop" ng-pattern="regexp.number" ng-disabled="isDisabled()" />
+          </div>
+          <div class="form-group">
+            <input id="isDiscountAmountLimitPerShopValue" ng-model="formData.isDiscountAmountLimitPerShop" name="isDiscountAmountLimitPerShop" type="checkbox" ng-disabled="isDisabled()"/>
+            <label for="isDiscountAmountLimitPerShopValue">Discount Amount Limit Per Shop Value</label>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <fieldset ng-disabled="isDisabled()" ng-show="formData.isDiscountAmountLimitPerShop">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <label>Discount Amount Limit Per Shop Value</label>
+                <div class="form-group" ng-repeat="currency in companyCurrencyGlobalsList">
+                  <div class="input-group" >
+                    <div class="input-group-addon">
+                      {{ currency.code }} *
+                    </div>
+                    <input ng-model="formData.discountAmountLimitPerShopValue[currency.id]" name="{{ currency.code }}DiscountAmountLimitPerShopValue" ng-disabled="$parent.isDisabled()" ng-required="formData.isDiscountAmountLimitPerShop" ng-pattern="regexp.price" type="text" class="form-control" />
                   </div>
                 </div>
               </div>
