--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -225,8 +225,22 @@
       </div>
 
       <h3>Limitation Per Transaction</h3>
-
       <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <div class="form-group">
+            <label  for="limitByTransactionDiscountType">Limitation Type</label>
+            <select
+              name="limitByTransactionDiscountType"
+              class="form-control"
+              id="limitByTransactionDiscountType"
+              ng-model="formData.limitByTransactionDiscountType"
+              ng-options="limitationType as limitationType.name for limitationType in discountLimitationTypes">
+              <option selected default value="">Select Limitation Type</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row" ng-if="formData.limitByTransactionDiscountType.id === 1">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
             <label class="control-label">Item Qty Limit Per Transaction</label>
@@ -255,16 +269,73 @@
           </fieldset>
         </div>
       </div>
+      <div class="row" ng-if="formData.limitByTransactionDiscountType.id === 2">
+        <div class="col-xs-12 col-sm-6">
+          <div class="form-group">
+            <label class="control-label">Discount Qty Limit Per Transaction</label>
+            <input class="form-control" ng-model="formData.discountQtyLimitPerTransaction" name="discountQtyLimitPerTransaction" ng-pattern="regexp.number" ng-disabled="isDisabled()" />
+          </div>
+          <div class="form-group">
+            <input id="isDiscountAmountLimitPerTransactionValue" ng-model="formData.isDiscountAmountLimitPerTransaction" name="isDiscountAmountLimitPerTransaction" type="checkbox" ng-disabled="isDisabled()"/>
+            <label for="isDiscountAmountLimitPerTransactionValue">Discount Amount Limit Per Transaction Value</label>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <fieldset ng-disabled="isDisabled()" ng-show="formData.isDiscountAmountLimitPerTransaction">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <label>Discount Amount Limit Per Transaction Value</label>
+                <div class="form-group" ng-repeat="currency in companyCurrencyGlobalsList">
+                  <div class="input-group" >
+                    <div class="input-group-addon">
+                      {{ currency.code }} *
+                    </div>
+                    <input ng-model="formData.discountAmountLimitPerTransactionValue[currency.id]" name="{{ currency.code }}DiscountAmountLimitPerTransactionValue" ng-disabled="$parent.isDisabled()" ng-required="formData.isDiscountAmountLimitPerTransaction" ng-pattern="regexp.price" type="text" class="form-control" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
 
       <h3>Limitation Per Seat</h3>
-
       <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <div class="form-group">
+            <label  for="limitBySeatDiscountType">Limitation Type</label>
+            <select
+              name="limitBySeatDiscountType"
+              class="form-control"
+              id="limitBySeatDiscountType"
+              ng-model="formData.limitBySeatDiscountType"
+              ng-options="limitationType as limitationType.name for limitationType in discountLimitationTypes">
+              <option selected default value="">Select Limitation Type</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row" ng-if="formData.limitBySeatDiscountType.id === 1">
         <div class="col-xs-12 col-sm-6">
           <fieldset ng-disabled="isDisabled()">
             <div class="row">
               <div class="col-xs-12 col-sm-6">
                 <div class="form-group">
                   <label class="control-label">Item Qty Limit Per Seat</label>
+                  <input class="form-control" ng-model="formData.itemQtyLimitPerSeat" name="itemQtyLimitPerSeat" ng-pattern="regexp.number" />
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+      <div class="row" ng-if="formData.limitBySeatDiscountType.id === 2">
+        <div class="col-xs-12 col-sm-6">
+          <fieldset ng-disabled="isDisabled()">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label class="control-label">Discount Qty Limit Per Seat</label>
                   <input class="form-control" ng-model="formData.itemQtyLimitPerSeat" name="itemQtyLimitPerSeat" ng-pattern="regexp.number" />
                 </div>
               </div>
