--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -336,7 +336,7 @@
               <div class="col-xs-12 col-sm-6">
                 <div class="form-group">
                   <label class="control-label">Discount Qty Limit Per Seat</label>
-                  <input class="form-control" ng-model="formData.itemQtyLimitPerSeat" name="itemQtyLimitPerSeat" ng-pattern="regexp.number" />
+                  <input class="form-control" ng-model="formData.discountQtyLimitPerSeat" name="discountQtyLimitPerSeat" ng-pattern="regexp.number" />
                 </div>
               </div>
             </div>
