--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -153,19 +153,19 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
-            <label  for="limitByShopDiscountType">Limitation Type</label>
-            <select
-              name="limitByShopDiscountType"
-              class="form-control"
-              id="limitByShopDiscountType"
-              ng-model="formData.limitByShopDiscountType"
-              ng-options="limitationType as limitationType.name for limitationType in discountLimitationTypes">
-              <option selected default value="">Select Limitation Type</option>
-            </select>
+            <div class="radio">
+              <label>
+                <input type="radio" value="1" ng-model="formData.limitByShopDiscountType" />Item
+              </label>
+              &nbsp;&nbsp;
+              <label>
+                <input type="radio" value="2" ng-model="formData.limitByShopDiscountType" />Discount
+              </label>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row" ng-if="formData.limitByShopDiscountType.id === 1">
+      <div class="row" ng-if="formData.limitByShopDiscountType == 1">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
             <label class="control-label">Item Qty Limit Per Shop</label>
@@ -194,7 +194,7 @@
           </fieldset>
         </div>
       </div>
-      <div class="row" ng-if="formData.limitByShopDiscountType.id === 2">
+      <div class="row" ng-if="formData.limitByShopDiscountType == 2">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
             <label class="control-label">Discount Qty Limit Per Shop</label>
