--- a/app/views/store-instance-packing.html
+++ b/app/views/store-instance-packing.html
@@ -177,7 +177,7 @@
         </tr>
 
         <!-- New Pick List Items-->
-        <tr ng-repeat="item in newPickListItems track by $index" ng-hide="readOnly">
+        <tr ng-repeat="item in newPickListItems | filter:{itemDescription: itemFilterText} | orderBy:itemSortOrder" ng-class="showVarianceWarningClass(item)" class="item-{{item.itemMasterId}}" ng-hide="readOnly">
           <td>
             <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterPickListItems()" name="newPickListItem{{ $index }}">
               <ui-select-match placeholder="Select item from list">{{$select.selected.itemCode }} - {{
@@ -322,7 +322,7 @@
         </tr>
 
         <!-- New Offload List Items-->
-        <tr ng-repeat="item in newOffloadListItems track by $index" ng-hide="readOnly">
+        <tr ng-repeat="item in newOffloadListItems | filter:{itemDescription: itemFilterText} | orderBy:offLoadItemsSortOrder" ng-hide="readOnly">
           <td>
             <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterOffloadListItems()" name="newOffloadListItem{{ $index }}">
               <ui-select-match placeholder="Select item from list">{{$select.selected.itemCode }} - {{
